--- a/package.json
+++ b/package.json
@@ -20,12 +20,13 @@
     "react-icons": "^5.3.0",
     "reacticons": "^0.0.1",
     "tailwind-merge": "^2.5.3",
+    "typescript": "^5.6.3",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
-    "@types/react": "^18.3.10",
-    "@types/react-dom": "^18.3.0",
+    "@types/react": "^18.3.11",
+    "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.2",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.11.1",
