--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
+    "react-redux": "^9.1.2",
     "reacticons": "^0.0.1",
     "tailwind-merge": "^2.5.3",
     "typescript": "^5.6.3",
